# chimpoe

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  garden-80f3399a.jsonl  knip.json  lefthook.yml  package.json  tsconfig.json  turbo.json
crates/chimpoe-cli/: Cargo.toml
crates/chimpoe-cli/src/: buffer.rs  config.rs  main.rs  providers.rs
crates/chimpoe-cli/src/commands/: add.rs  ask.rs  finalize.rs  init.rs  list.rs  mod.rs  search.rs
crates/chimpoe-core/: Cargo.toml
crates/chimpoe-core/examples/: basic.rs  openai.rs  sqlite.rs
crates/chimpoe-core/src/: chimpoe.rs  config.rs  error.rs  lib.rs  mocks.rs  traits.rs  types.rs
crates/chimpoe-core/src/embed/: mod.rs  ollama.rs  openai.rs
crates/chimpoe-core/src/llm/: mod.rs  ollama.rs  openai.rs
crates/chimpoe-core/src/pipeline/: answer.rs  compress.rs  mod.rs  retriever.rs  synthesize.rs
crates/chimpoe-core/src/store/: sqlite.rs
crates/chimpoe-core/src/vector/: in_memory.rs  mod.rs  sqlite.rs
