[workspace]
resolver = "3"
members = ["crates/chimpoe-cli", "crates/chimpoe-core"]

[workspace.package]
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
authors = ["Deni Andreawan Kusuma"]
description = "Long-term memory for AI agents"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "http2"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", default-features = false, features = ["derive", "env", "std", "help", "usage", "error-context", "suggestions"] }
toml = "0.8"
dirs = "6"
colored = "3"
tabled = "0.18"
chrono-english = "0.1"
sqlite-vec = "0.1"
dialoguer = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"