[package]
name = "chimpoe-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
