[package]
name = "chimpoe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-english.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
